:art: :lipstick: :sparkles: Patterns with CRUD & some UI changes.

--- a/src/views/index.html.ejs
+++ b/src/views/index.html.ejs
@@ -1,6 +1,5 @@
-<h1>Hello world</h1>
-<p>
-  App web version
-  <%= appVersion %>
-</p>
-<div id="react-app">Here a React app will be rendered</div>
+<h1>Home</h1>
+<br>
+<h3>Bienvenido a Knitter, la mayor comunidad textil del mundo!</h3>
+<br>
+<div id="home">(App React que aún no existe)</div>
