--- a/src/views/layout.html.ejs
+++ b/src/views/layout.html.ejs
@@ -11,8 +11,9 @@
 
   <body>
     <header>
-      <div id="logo">
-        <img src="<%= assetPath('logo.png') %>" alt="Logo" />
+      <div class="topnav" id="navbar">
+        <a class="active" href="/">Home</a>
+        <a href="/patterns">Patrones</a>
       </div>
     </header>
     <%- body %>
