--- a/src/views/patterns/_form.html.ejs
+++ b/src/views/patterns/_form.html.ejs
@@ -13,24 +13,38 @@
       <% if (!pattern.isNewRecord) { %>
         <input type="hidden" name="_method" value="patch" />
       <% } %>
+      <div id="panel">
       <div>
-        <label for="name">Nombre</label>
-        <input type="text" name="name" value="<%= pattern.name %>" />
+        <label for="name">Nombre:</label>
+        <input type="text" name="name" size="40" value="<%= pattern.name %>" required/>
       </div>
       <div>
-        <label for="image">Imagen</label>
-        <input type="text" name="image" value="<%= pattern.image %>" />
+        <label for="image">Imagen:</label>
+        <input type="text" name="image" size="40" value="<%= pattern.image %>" required/>
       </div>
       <div>
-        <label for="instructions">Instrucciones</label>
-        <textarea type="text" name="instructions"><%= pattern.instructions %></textarea>
+        <label for="video">Link a Video (opcional):</label>
+        <input type="text" name="video" size="40" value="<%= pattern.video %>" />
+      </div>
+      <div>
+        <label for="instructions">Instrucciones:</label><br><br>
+        <textarea rows="8" cols="100" type="text" required name="instructions"><%= pattern.instructions %></textarea>
       </div>
       <div>
         <% if (pattern.isNewRecord) { %>
+          <div>
+            <label for="authorId">Autor (ID):</label>
+            <input type="number" step="1" min="1" name="authorId" value="<%= pattern.authorId %>" required/>
+          </div>
+          <div>
+            <label for="categoryId">Categoría (ID):</label>
+            <input type="number" step="1" min="1" name="categoryId" value="<%= pattern.categoryId %>" required/>
+          </div>
           <input type="submit" name="create" value="Crear" />
         <% } else { %>
           <input type="submit" name="update" value="Actualizar" />
         <% } %>
+      </div>
       </div>
     </form>
   </div>
