--- a/src/views/patterns/index.html.ejs
+++ b/src/views/patterns/index.html.ejs
@@ -1,4 +1,11 @@
 <h1>Patrones</h1>
+<div id="button">
+    <form action="<%- newPatternPath %>">
+        <input type="submit" value="Crear Patrón de Dibujo" />
+    </form>
+</div>
+<div id="panel">
+<h2>Lista de Patrones</h2>
 <% if (!patternsList.length) { %>
   <p>No hay patrones!</p>
 <% } else { %>
@@ -6,7 +13,6 @@
     <thead>
         <tr>
           <th>Nombre</th>
-          <th>Imagen</th>
           <th>Puntaje</th>
           <th colspan="2">Acciones</th>
         </tr>
@@ -14,10 +20,13 @@
     <tbody>
       <% patternsList.forEach((pattern) => { %>
         <tr>
-          <td><%- pattern.name %></td>
-          <td><%- pattern.image %></td>
-          <td><%- pattern.score %></td>
-          <td><a href="<%- editPatternPath(pattern) %>">Editar</a></td>
+          <td><a href="<%- patternPath(pattern) %>"><%- pattern.name %></a></td>
+          <td><%- pattern.score %>/5</td>
+          <td>
+            <form action="<%- editPatternPath(pattern) %>">
+              <input type="submit" value="Editar" />
+            </form>
+          </td>
           <td>
             <form action="<%- deletePatternPath(pattern) %>" method="POST">
               <input type="hidden" name="_method" value="delete" />
@@ -29,5 +38,4 @@
     </tbody>
   </table>
 <% } %>
-
-<a href="<%- newPatternPath %>">Crear Patrón de Dibujo</a>
+</div>
