--- a/src/views/patterns/new.html.ejs
+++ b/src/views/patterns/new.html.ejs
@@ -1,2 +1,8 @@
-<h2>Nuevo Patrón de Dibujo</h2>
+<br>
+<h1>Nuevo Patrón de Dibujo</h1>
 <%- include('_form') %>
+<div id="button">
+    <form action="<%- patternsPath %>">
+        <input type="submit" value="Volver" />
+    </form>
+</div>
