:ok_hand: Added youtube link.

--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -12,8 +12,8 @@
     </div>
     <div id="right">
         <iframe allowFullScreen="allowFullScreen" src="https://www.youtube.com/embed/<%= pattern.video.slice(32) %>?ecver=1&amp;iv_load_policy=1
-            &amp;rel=0&amp;yt:stretch=16:9&amp;autohide=1&amp;color=red&amp;width=560&amp;width=560" 
-        width="560" height="315" allowtransparency="true" frameborder="0">
+            &amp;rel=0&amp;yt:stretch=16:9&amp;autohide=1&amp;color=red" 
+        width="80%" height="160%" allowtransparency="true" frameborder="0">
         </iframe>
     </div>
 </div>
