--- a/src/assets/styles/views.scss
+++ b/src/assets/styles/views.scss
@@ -5,14 +5,14 @@
 #hcontainer {height: 100%; width:100%; display: flex; margin: 1%;}
 #left {width: 30%;}
 #middle {width: 20%;}
-#right {width: 50%;}
+#right {width: 50%; margin-right: 1%;}
 
 // Panel Display
 
 #panel {height: 100%; width:100%; margin: 1%;}
 
 // Long Text Display
-#long {white-space: pre-line; margin: 1%; width: 50%;}
+#long {white-space: pre-line; margin: 1%; width: 40%;}
 
 // Buttons
 #button {margin: 0%;}
