:ok_hand::sparkles: CRUD done!

--- a/src/views/layout.html.ejs
+++ b/src/views/layout.html.ejs
@@ -14,6 +14,7 @@
       <div class="topnav" id="navbar">
         <a class="active" href="/">Home</a>
         <a href="/patterns">Patrones</a>
+        <a href="/categories">Categorías</a>
       </div>
     </header>
     <%- body %>
