:ok_hand::sparkles: CUD done!

--- a/src/views/layout.html.ejs
+++ b/src/views/layout.html.ejs
@@ -15,6 +15,7 @@
         <a class="active" href="/">Home</a>
         <a href="/patterns">Patrones</a>
         <a href="/categories">Categorías</a>
+        <a href="/materials">Materiales</a>
       </div>
     </header>
     <%- body %>
