--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -8,7 +8,12 @@
     <div id="middle">
         <p>Diseñado por: <%- author.username %></p>
         <p>Categoría: <%- category.name %></p>
+        <p>Tensión: <%- pattern.tension %></p>
         <p>Puntaje: <%- pattern.score %>/5</p>
+        <p>Materiales:</p>
+        <% materials.forEach(material => { %>
+            <p>- <%- material.name %><br>
+        <% }); %>
     </div>
     <div id="right">
         <iframe allowFullScreen="allowFullScreen" src="https://www.youtube.com/embed/<%= pattern.video.slice(32) %>?ecver=1&amp;iv_load_policy=1
