Users terminated :sparkles: Auth on the way :lock:

--- a/src/views/layout.html.ejs
+++ b/src/views/layout.html.ejs
@@ -16,6 +16,7 @@
         <a href="/patterns">Patrones</a>
         <a href="/categories">Categorías</a>
         <a href="/materials">Materiales</a>
+        <a href="/users">Usuarios</a>
       </div>
     </header>
     <%- body %>
