:sparkles: Login & Session
Token on the way

--- a/src/views/users/_form.html.ejs
+++ b/src/views/users/_form.html.ejs
@@ -23,7 +23,7 @@
         <input type="text" name="email" size="40" value="<%= user.email %>" required/>
       </div>
       <div>
-        <label for="password">Contrasena:</label>
+        <label for="password">Contraseña:</label>
         <input type="password" name="password" size="40" value="<%= user.password %>" required/>
       </div>
       <div>
