:ok_hand: CRUD complete :D

--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -9,7 +9,7 @@
         <p>Diseñado por: <%- author.username %></p>
         <p>Categoría: <%- category.name %></p>
         <p>Tensión: <%- pattern.tension %></p>
-        <p>Puntaje: <%- average %>/5</p>
+        <p>Puntaje: <%- pattern.score %>/5</p>
         <p>Materiales:</p>
         <% materials.forEach(material => { %>
             <p>- <%- material.name %><br>
