:ok_hand: CRUD Done

--- a/src/views/layout.html.ejs
+++ b/src/views/layout.html.ejs
@@ -18,6 +18,7 @@
         <a href="/materials">Materiales</a>
         <a href="/users">Usuarios</a>
         <a href="/vote_patterns">Votos</a>
+        <a href="/comments">Comentarios</a>
         <div id="user-bar">
           <% if (currentUser) { %>
             <span class="name">Hola <%= currentUser.username %></span>
