--- a/src/views/session/new.html.ejs
+++ b/src/views/session/new.html.ejs
@@ -11,11 +11,11 @@
   <form action="<%= createSessionPath %>" method="post">
     <input type="hidden" name="_method" value="put" />
     <div class="field">
-      <label for="email">Correo</label>
+      <label for="email">Correo:</label>
       <input type="email" name="email" value="<%= locals.email %>" />
     </div>
     <div class="field">
-      <label for="password">Contraseña</label>
+      <label for="password">Contraseña:</label>
       <input type="password" name="password" value="<%= locals.password %>" />
     </div>
     <div class="field">
