--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -28,9 +28,33 @@
 </div>
 <h4>Comentarios</h4>
 <div id="long">
-  <% commentsList.forEach(comment => { %>
-      <p>- <%- comment.content %><br>
-  <% }); %>
+  <div id="button">
+      <form action="<%- newCommentPath %>">
+          <input type="submit" value="Crear Comentario" />
+      </form>
+  </div>
+
+  <table>
+    <tbody>
+        <% commentsList.forEach(comment => { %>
+        <tr>
+          <td><%- comment.content %>
+          </td>
+          <td>
+            <form action="<%- editCommentPath(comment) %>">
+              <input type="submit" value="Editar" />
+            </form>
+          </td>
+          <td>
+            <form action="<%- deleteCommentPath(comment) %>" onclick="return confirm('Estás seguro?');" method="POST">
+              <input type="hidden" name="_method" value="delete" />
+              <input type="submit" value="Eliminar" />
+            </form>
+          </td>
+        </tr>
+      <% }) %>
+    </tbody>
+  </table>
 </div>
 <br><br>
 <div id="button">
