:ok_hand: Votes into Pattern's show view

--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -26,6 +26,9 @@
 <div id="long">
     <%- pattern.instructions %>
 </div>
+<!--Aquí vamos a votar -->
+<%- include('../vote_patterns/_form') %>
+<!-- Término del voto -->
 <h4>Comentarios</h4>
 <div id="long">
   <div id="button">
