:art: :fire: Slight fixes & deleted Hello.

--- a/src/views/layout.html.ejs
+++ b/src/views/layout.html.ejs
@@ -21,13 +21,12 @@
         <a href="/comments">Comentarios</a>
         <div id="user-bar">
           <% if (currentUser) { %>
-            <span class="name">Hola <%= currentUser.username %></span>
+            <span class="name">Hola <%= currentUser.username %>!</span>
             <form action="<%= destroySessionPath %>" method="post">
               <input type="hidden" name="_method" value="delete" />
               <input type="submit" value="Logout" />
             </form>
           <% } else { %>
-            <span class="name"></span>
             <a href="<%= newSessionPath %>">Login</a>
           <% } %>
         </div>
