--- a/src/views/comments/_form.html.ejs
+++ b/src/views/comments/_form.html.ejs
@@ -10,12 +10,15 @@
     </div>
   <% } %>
   <form action="<%= submitCommentPath %>" method="POST">
+    <% if (!comment.isNewRecord) { %>
+      <input type="hidden" name="_method" value="PATCH" />
+    <% } %>
     <div id="panel">
       <div>
         <% if (comment.isNewRecord) { %>
           <div>
             <textarea rows="8" cols="80" type="text" required name="content"></textarea>
-            <input type="hidden" name="userId" value="<%= author.id %>">
+            <input type="hidden" name="userId" value="<%= currentUser.id %>">
             <input type="hidden" id="patternId" name="patternId" value="<%= pattern.id %>">
           </div>
         <% } else { %>
