--- a/src/views/comments/edit.html.ejs
+++ b/src/views/comments/edit.html.ejs
@@ -1,8 +1,8 @@
 <br>
-<h1>Editar el Comentario</h1>
+<h1>Editar Comentario</h1>
 <%- include('_form') %>
 <div id="button">
-    <form action="<%- commentsPath %>">
-        <input type="submit" value="Volver" />
-    </form>
+  <form action="<%- patternPath %>">
+      <input type="submit" value="Volver" />
+  </form>
 </div>
