:ok_hand: Better CRUD.

--- a/src/views/categories/_form.html.ejs
+++ b/src/views/categories/_form.html.ejs
@@ -9,9 +9,9 @@
         </ul>
       </div>
     <% } %>
-    <form action="<%= submitCategoryPath %>" method="post">
+    <form action="<%= submitCategoryPath %>" method="POST">
       <% if (!category.isNewRecord) { %>
-        <input type="hidden" name="_method" value="patch" />
+        <input type="hidden" name="_method" value="PATCH" />
       <% } %>
       <div id="panel">
       <div>
