--- a/src/views/categories/edit.html.ejs
+++ b/src/views/categories/edit.html.ejs
@@ -1,5 +1,5 @@
 <br>
-<h1>Editar la categoría</h1>
+<h1>Editar Categoría</h1>
 <%- include('_form') %>
 <div id="button">
     <form action="<%- categoriesPath %>">
