--- a/src/views/categories/index.html.ejs
+++ b/src/views/categories/index.html.ejs
@@ -5,7 +5,7 @@
     </form>
 </div>
 <div id="panel">
-<h2>Lista de Categorias</h2>
+<h2>Lista de Categorías</h2>
 <% if (!categoriesList.length) { %>
   <p>No hay categorías!</p>
 <% } else { %>
