--- a/src/views/layout.html.ejs
+++ b/src/views/layout.html.ejs
@@ -27,7 +27,7 @@
           <a href="<%= newSessionPath %>">Iniciar Sesión</a>
         <% } %>
         <% if (flashMessage) { %>
-          <div class="alert-container"><br>
+          <div class="alert"><br>
             <center><%= flashMessage.warning %></center>
           </div>
         <% } %>
