--- a/src/views/users/new.html.ejs
+++ b/src/views/users/new.html.ejs
@@ -2,7 +2,7 @@
 <h1>Nuevo Usuario</h1>
 <%- include('_form') %>
 <div id="button">
-    <form action="<%- userPath %>">
+    <form action="<%- rootPath %>">
         <input type="submit" value="Volver" />
     </form>
 </div>
