--- a/src/views/users/show.html.ejs
+++ b/src/views/users/show.html.ejs
@@ -8,13 +8,11 @@
     <div id="middle">
         <p>Correo: <%- user.email %></p>
         <p>Edad: <%- user.age %></p>
-        <p>Rol: <%- user.role %></p>
     </div>
-
 </div>
 <br><br>
 <div id="button">
-    <form action="<%- usersPath %>">
+    <form action="<%- rootPath %>">
         <input type="submit" value="Volver" />
     </form>
 </div>
