--- a/src/views/users/edit.html.ejs
+++ b/src/views/users/edit.html.ejs
@@ -1,5 +1,5 @@
 <br>
-<h1>Editar el usuario</h1>
+<h1>Editar Perfil</h1>
 <%- include('_form') %>
 <div id="button">
     <form action="<%- userPath %>">
