:ok_hand: Home and UserLoggin CSS

--- a/src/views/index.html.ejs
+++ b/src/views/index.html.ejs
@@ -1,5 +1,3 @@
-<h1>Home</h1>
-<br>
-<h3>Bienvenido a Knitter, la mayor comunidad textil del mundo!</h3>
-<br>
-<div id="home">(App React que aún no existe)</div>
+<div class = "contenedor-body">
+    <h1>Lo mejor para ti...</h1>
+</div>
