--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -1,4 +1,25 @@
+
 html, body {
   margin: 0;
   padding: 0;
+}
+
+.topnav {
+  padding-top: 15px;
+  display: flex;
+  background-color: #26bfbf;
+  top: 0;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+
+.nav-text {
+  text-decoration: none;
+  font-family: "Dancing Script";
+  font-size: 30px;
+  color: white;
+  font-weight: normal;
+  align-self: auto;
+  padding-left: 20px;
 }
