--- a/src/views/layout.html.ejs
+++ b/src/views/layout.html.ejs
@@ -7,30 +7,48 @@
     <% if (env !== 'development') { %>
       <link rel="stylesheet" href="<%= assetPath('app.css') %>">
     <% } %>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Dancing+Script" />
   </head>
 
   <body>
     <header>
       <div class="topnav" id="navbar">
-        <a class="active" href="/">Home</a>
-        <a href="/patterns">Patrones</a>
-        <a href="/categories">Categorías</a>
-        <a href="/materials">Materiales</a>
-        <a href="/users">Usuarios</a>
-        <% if (currentUser) { %>
-          <span class="name">Hola <%= currentUser.username %>!</span>
-          <form action="<%= destroySessionPath %>" method="post">
-            <input type="hidden" name="_method" value="delete" />
-            <input type="submit" value="Cerrar Sesión" />
-          </form>
-        <% } else { %>
-          <a href="<%= newSessionPath %>">Iniciar Sesión</a>
-        <% } %>
-        <% if (flashMessage) { %>
-          <div class="alert"><br>
-            <center><%= flashMessage.warning %></center>
-          </div>
-        <% } %>
+        <div>
+          <!-- poner logo-->
+          <a class="nav-text" href="/">Home</a>
+        </div>
+        <div>
+          <a class="nav-text" href="/patterns">Patrones</a>
+        </div>
+        <div class="hide-500">
+          <a class="nav-text"  href="/categories">Categorías</a>
+        </div>
+        <div class="hide-690">
+          <a class="nav-text" href="/materials">Materiales</a>
+        </div>
+        <!-- dar la opción de que el admin pueda ver esto-->
+        <div class="hide-750">
+            <a class="nav-text" href="/users">Usuarios</a>
+        </div>
+        <div>
+            <% if (currentUser) { %>
+              <span class="name">Hola <%= currentUser.username %>!</span>
+              <form action="<%= destroySessionPath %>" method="post">
+                <input type="hidden" name="_method" value="delete" />
+                <input type="submit" value="Cerrar Sesión" />
+              </form>
+            <% } else { %>
+              <a class="nav-text" href="<%= newSessionPath %>">Iniciar Sesión</a>
+            <% } %>
+            <% if (flashMessage) { %>
+              <div class="alert-container"><br>
+                <center><%= flashMessage.warning %></center>
+              </div>
+            <% } %>
+        </div>
+        <div class="nav-text">
+
+        </div>
       </div>
     </header>
     <%- body %>
