--- a/src/assets/styles/user_loggin.scss
+++ b/src/assets/styles/user_loggin.scss
@@ -1,6 +1,7 @@
 
 .body-content{
   margin: 30px;
+  margin-top: 100px;
 }
 
 .user-session-login-content{
@@ -14,7 +15,9 @@
 .border-css{
   border-style: solid;
   border-top-style: none;
+
   padding: 30px;
+  padding-bottom: 20px;
   border-color:  #26bfbf;
 }
 
@@ -28,7 +31,7 @@
 }
 
 .body-item{
-  padding-bottom: 15px;
+  padding-bottom: 10px;
 }
 
 .body-item2{
