--- a/src/assets/styles/user_loggin.scss
+++ b/src/assets/styles/user_loggin.scss
@@ -17,6 +17,8 @@
   border-top-style: none;
 
   padding: 30px;
+  padding-left: 80px;
+  padding-right: 80px;
   padding-bottom: 20px;
   border-color:  #26bfbf;
 }
