--- a/src/views/session/new.html.ejs
+++ b/src/views/session/new.html.ejs
@@ -7,7 +7,9 @@
           <% } %>
       </div>
       <div >
-        <h1 class="title">Iniciar Sesión</h1>
+        <h1 class="title">Knitter
+
+        </h1>
       </div>
       <div >
         <% if (locals.error) { %>
