--- a/src/assets/styles/user_loggin.scss
+++ b/src/assets/styles/user_loggin.scss
@@ -9,13 +9,13 @@
   flex-direction: column;
   align-items: center;
   border-block-color: #26bfbf;
-
 }
 
 .border-css{
   border-style: solid;
   border-top-style: none;
-
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
   padding: 30px;
   padding-left: 80px;
   padding-right: 80px;
@@ -51,14 +51,11 @@ input{
   width: 100%;
   height: 20px;
   border-color: none;
-
-
 }
 
 .end-user-login{
   padding-top: 20px;
   width: 100%;
-
 }
 
 #boton{
@@ -69,5 +66,6 @@ input{
   font-size: 20px;
   border-style: none;
   color: white;
+  border-radius: 15px;
 
 }
