:ok_hand: new user done

--- a/src/views/session/new.html.ejs
+++ b/src/views/session/new.html.ejs
@@ -1,4 +1,4 @@
-<div class ="body-content">
+<div class = "contenedor-body">
   <div class="user-session-login-content">
     <div class="border-css">
       <div>
