--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -23,5 +23,6 @@ html, body {
   color: white;
   font-weight: normal;
   align-self: auto;
-  padding-left: 20px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
