--- a/src/assets/styles/user_list.scss
+++ b/src/assets/styles/user_list.scss
@@ -37,6 +37,7 @@
 .user-parag-list{
   font-family: Arial;
   font-weight: 400 ;
-  padding-bottom: 10px;
+  padding: 10px;
+  padding-left: 0px;
   font-style: italic;
 }
