--- a/src/views/users/_form.html.ejs
+++ b/src/views/users/_form.html.ejs
@@ -1,4 +1,4 @@
-<div>
+<div class="form">
     <% if (locals.errors) { %>
       <div class="errors">
         Ocurrieron los siguientes errores:
@@ -13,35 +13,52 @@
       <% if (!user.isNewRecord) { %>
         <input type="hidden" name="_method" value="PATCH" />
       <% } %>
-      <div id="panel">
-      <div>
-        <label for="username">Nombre de Usuario:</label>
-        <input type="text" name="username" size="40" value="<%= user.username %>" required/>
-      </div>
-      <div>
-        <label for="email">Correo:</label>
-        <input type="text" name="email" size="40" value="<%= user.email %>" required/>
-      </div>
-      <div>
-        <label for="password">Contraseña:</label>
-        <input type="password" name="password" size="40" value="<%= user.password %>" required/>
-      </div>
-      <div>
-        <label for="age">Edad:</label>
-        <input type="number" name="age" min="0" max="150" step="1" value="<%= user.age %>" required/>
-      </div>
-      <div>
-        <label for="age">Foto:</label>
-        <input type="text" name="photo" size="40" value="<%= user.photo %>" required/>
-      </div>
-      <div>
-        <input type="hidden" name="role" value="common" />
-      </div>
-      <% if (user.isNewRecord) { %>
-        <input type="submit" name="create" value="Crear" />
-      <% } else { %>
-        <input type="submit" name="update" value="Actualizar" />
-      <% } %>
+      <div class="panel">
+        <div class="panel-content">
+          <label class="user-parag-list" for="username">Nombre de Usuario:</label>
+        </div>
+        <div class="panel-content">
+          <input class="user-input-list" type="text" name="username" size="40" value="<%= user.username %>" required/>
+        </div>
+        <div class="panel-content">
+          <label class="user-parag-list" for="email">Correo:</label>
+        </div>
+        <div class="panel-content">
+          <input class="user-input-list" type="text" name="email" size="40" value="<%= user.email %>" required/>
+        </div>
+        <div class="panel-content">
+          <label class="user-parag-list" for="password">Contraseña:</label>
+        </div>
+        <div class="panel-content">
+          <input class="user-input-list" type="password" name="password" size="40" value="<%= user.password %>" required/>
+        </div >
+        <div class="panel-content">
+          <label class="user-parag-list" for="age">Edad:</label>
+        </div>
+        <div class="panel-content">
+          <input class="user-input-list" type="number" name="age" min="0" max="150" step="1" value="<%= user.age %>" required/>
+        </div>
+        <div class="panel-content">
+          <label class="user-parag-list" for="age">Foto:</label>
+        </div>
+        <div class="panel-content">
+          <input class="user-input-list" type="text" name="photo" size="40" value="<%= user.photo %>" required/>
+        </div>
+        <div class="hide">
+          <input type="hidden" name="role" value="common" />
+        </div>
+        <div class="button_space">
+          <% if (user.isNewRecord) { %>
+            <input id="boton" type="submit" name="create" value="Crear" />
+          <% } else { %>
+            <input id="boton" type="submit" name="update" value="Actualizar" />
+          <% } %>
+        </div>
       </div>
     </form>
+    <div class="button_space">
+        <form action="<%- rootPath %>">
+            <input id="boton" type="submit" value="Volver" />
+        </form>
+    </div>
   </div>
