:sparkles: Added pattern search.

--- a/src/views/patterns/index.html.ejs
+++ b/src/views/patterns/index.html.ejs
@@ -5,6 +5,8 @@
   </form>
 <% } %>
 <div id="panel">
+<h2>Buscar Patrones</h2>
+<%- include('search') %>
 <h2>Lista de Patrones</h2>
 <% if (!patternsList.length) { %>
   <p>No hay patrones!</p>
