--- a/src/views/materials/edit.html.ejs
+++ b/src/views/materials/edit.html.ejs
@@ -1,8 +1,10 @@
-<br>
-<h1>Editar el material</h1>
-<%- include('_form') %>
-<div id="button">
-    <form action="<%- materialsPath %>">
-        <input type="submit" value="Volver" />
-    </form>
+
+
+<div class="contenedor-body" id="body-container">
+  <div class="content-new-user">
+    <h1 class="panel-content">Editar Material</h1>
+  </div>
+  <div class="content-new-user">
+    <%- include('_form') %>
+  </div>
 </div>
